# RideNow-Backend

./: .gitignore  Cargo.toml  README.md
migrations/: 202602240001_create_users.sql  202602240002_create_drivers.sql  202602250001_create_user_payments.sql  202602250002_create_driver_payments.sql  202602260001_create_transport_companies.sql  202602260002_create_vehicles.sql  202602260003_create_transport_company_drivers.sql
src/: main.rs
src/auth/: middleware.rs  mod.rs  password_utils.rs
src/handlers/: driver_handlers.rs  login_handler.rs  mod.rs  payment_handlers.rs  transport_company_handlers.rs  user_handlers.rs
src/models/: driver_model.rs  login_model.rs  mod.rs  payment_model.rs  transport_company_model.rs  user_model.rs
src/routes/: driver_route.rs  login_route.rs  mod.rs  payment_route.rs  protected_route.rs  transport_company_route.rs  user_route.rs
src/services/: database_service.rs  driver_service.rs  login_service.rs  mod.rs  payment_service.rs  transport_company_service.rs  user_service.rs
